<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>blackbox</name>
  <version>1.0.0</version>
  <description>A logging tool for ROS2. This package can create rosbag files within the process.</description>
  <maintainer email="matsushita.sena@gmail.com">sen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>tutrc_ament</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
